# ct-pedesalto

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.in  mkinstalldirs  plc-version  plc.c  version.h.in
commands/: Makefile.am  Makefile.in  command.bas  commands.c  commands.gen
common/: Makefile.am  Makefile.in  common.c  mymemory.c  serial.c  timer.c
comunication/: Makefile.am  Makefile.in  comunication.c
config/: Makefile.am  cfg.c
ct/: Makefile.am  Makefile.in  ct.c  ct_cfg.c  illumination.c  illumination.h  scenari.c  scenari.h  traffico.h  ventilatori.c  ventilatori.h  ventilazione.c  ventilazione.h
devices/: Makefile.am  Makefile.in  dev_mgr.c
drivers/: Makefile.am  Makefile.in  autovideo.c  ax10412drv.c  ax5032drv.c  drivers_par  mb_drv.c  mbrtutun_drv.c  mbtcp_drv.c
drivers/atv/: atv1.cfg
elaboration/: Makefile.am
include/: autovideo.h  ax10412.h  ax5032.h  cfg.h  commands.h  common.h  comunication.h  dev_mgr.h  devices.h  elab.h  extern.h  mb_drv.h  modbus.h  mymemory.h  serial.h  server_modbus.h  timer.h
modbus/: Makefile.am  Makefile.in  crc16.c  modbus.c  server_modbus.c
script/: mkcommand_h  update_cl1  update_cl2  update_ct  update_ul
